src/core/syntactic_analysis/snapshots/blueberry__core__syntactic_analysis__parser__tests__parser_output@assignment.bb.snap
---
source: src/core/syntactic_analysis/parser.rs
expression: dump
input_file: src/core/syntactic_analysis/snapshot_inputs/assignment.bb
---
File
├─FunctionDefinition
│ ├─Func
│ │   Lexeme: "func"
│ │   Span: [0, 4)
│ ├─Whitespace
│ │   Lexeme: " "
│ │   Span: [4, 5)
│ ├─Identifier
│ │   Lexeme: "main"
│ │   Span: [5, 9)
│ ├─ParameterList
│ │ ├─OpenParen
│ │ │   Lexeme: "("
│ │ │   Span: [9, 10)
│ │ └─CloseParen
│ │     Lexeme: ")"
│ │     Span: [10, 11)
│ │ Span: [9, 11)
│ ├─Whitespace
│ │   Lexeme: " "
│ │   Span: [11, 12)
│ └─Block
│   ├─OpenBrace
│   │   Lexeme: "{"
│   │   Span: [12, 13)
│   ├─Whitespace
│   │   Lexeme: "\n    "
│   │   Span: [13, 18)
│   ├─ExpressionStatement
│   │ ├─Assignment
│   │ │ ├─PathExpression
│   │ │ │ └─Path
│   │ │ │   └─PathSegment
│   │ │ │     └─Identifier
│   │ │ │         Lexeme: "a"
│   │ │ │         Span: [18, 19)
│   │ │ │     Span: [18, 19)
│   │ │ │   Span: [18, 19)
│   │ │ │ Span: [18, 19)
│   │ │ ├─Whitespace
│   │ │ │   Lexeme: " "
│   │ │ │   Span: [19, 20)
│   │ │ ├─Equal
│   │ │ │   Lexeme: "="
│   │ │ │   Span: [20, 21)
│   │ │ ├─Whitespace
│   │ │ │   Lexeme: " "
│   │ │ │   Span: [21, 22)
│   │ │ └─Assignment
│   │ │   ├─PathExpression
│   │ │   │ └─Path
│   │ │   │   └─PathSegment
│   │ │   │     └─Identifier
│   │ │   │         Lexeme: "b"
│   │ │   │         Span: [22, 23)
│   │ │   │     Span: [22, 23)
│   │ │   │   Span: [22, 23)
│   │ │   │ Span: [22, 23)
│   │ │   ├─Whitespace
│   │ │   │   Lexeme: " "
│   │ │   │   Span: [23, 24)
│   │ │   ├─Equal
│   │ │   │   Lexeme: "="
│   │ │   │   Span: [24, 25)
│   │ │   ├─Whitespace
│   │ │   │   Lexeme: " "
│   │ │   │   Span: [25, 26)
│   │ │   └─PathExpression
│   │ │     └─Path
│   │ │       └─PathSegment
│   │ │         └─Identifier
│   │ │             Lexeme: "c"
│   │ │             Span: [26, 27)
│   │ │         Span: [26, 27)
│   │ │       Span: [26, 27)
│   │ │     Span: [26, 27)
│   │ │   Span: [22, 27)
│   │ │ Span: [18, 27)
│   │ └─Semicolon
│   │     Lexeme: ";"
│   │     Span: [27, 28)
│   │ Span: [18, 28)
│   ├─Whitespace
│   │   Lexeme: "\n"
│   │   Span: [28, 29)
│   └─CloseBrace
│       Lexeme: "}"
│       Span: [29, 30)
│   Span: [12, 30)
│ Span: [0, 30)
└─Whitespace
    Lexeme: "\n"
    Span: [30, 31)
Span: [0, 31)
