src/core/syntactic_analysis/snapshots/blueberry__core__syntactic_analysis__parser__tests__parser_output@boolean_literal.bb.snap
---
source: src/core/syntactic_analysis/parser.rs
expression: dump
input_file: src/core/syntactic_analysis/snapshot_inputs/boolean_literal.bb
---
File
├─FunctionDefinition
│ ├─Func
│ │   Lexeme: "func"
│ │   Span: [0, 4)
│ ├─Whitespace
│ │   Lexeme: " "
│ │   Span: [4, 5)
│ ├─Identifier
│ │   Lexeme: "f"
│ │   Span: [5, 6)
│ ├─ParameterList
│ │ ├─OpenParen
│ │ │   Lexeme: "("
│ │ │   Span: [6, 7)
│ │ └─CloseParen
│ │     Lexeme: ")"
│ │     Span: [7, 8)
│ │ Span: [6, 8)
│ ├─Whitespace
│ │   Lexeme: " "
│ │   Span: [8, 9)
│ └─Block
│   ├─OpenBrace
│   │   Lexeme: "{"
│   │   Span: [9, 10)
│   ├─Whitespace
│   │   Lexeme: "\n    "
│   │   Span: [10, 15)
│   ├─ExpressionStatement
│   │ ├─BooleanLiteral
│   │ │ └─True
│   │ │     Lexeme: "true"
│   │ │     Span: [15, 19)
│   │ │ Span: [15, 19)
│   │ └─Semicolon
│   │     Lexeme: ";"
│   │     Span: [19, 20)
│   │ Span: [15, 20)
│   ├─Whitespace
│   │   Lexeme: "\n    "
│   │   Span: [20, 25)
│   ├─ExpressionStatement
│   │ ├─BooleanLiteral
│   │ │ └─False
│   │ │     Lexeme: "false"
│   │ │     Span: [25, 30)
│   │ │ Span: [25, 30)
│   │ └─Semicolon
│   │     Lexeme: ";"
│   │     Span: [30, 31)
│   │ Span: [25, 31)
│   ├─Whitespace
│   │   Lexeme: "\n"
│   │   Span: [31, 32)
│   └─CloseBrace
│       Lexeme: "}"
│       Span: [32, 33)
│   Span: [9, 33)
│ Span: [0, 33)
└─Whitespace
    Lexeme: "\n"
    Span: [33, 34)
Span: [0, 34)
